Pick alias datatype values from the Run/Trace launcher lists EPBDS-16660 brought back, find an array element by its drawn path in both launchers, and split the alias test into the values check and a Trace-keeps-Run-input check that fails until that is decided